# Preppy

./: .gitignore  README.md  models.md  pyproject.toml
src/dinner_planner/: __init__.py  cli.py  models.py  normalization.py  repository.py
src/dinner_planner/classification/: __init__.py  rules.py
src/dinner_planner/importers/: __init__.py  pdf_classifier.py  pdf_extractor.py  pdf_importer.py  pdf_postprocess.py  pdf_segmenter.py
src/dinner_planner/planner/: __init__.py  constraints.py  generator.py  models.py  scoring.py
src/preppy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_classification_rules.py  test_cli_quantity_format.py  test_manual_edit.py  test_normalization.py  test_pdf_agnostic_pipeline.py  test_pdf_parser.py  test_pdf_postprocess.py  test_planner.py
