[project]
name = "preppy"
version = "0.1.0"
description = "CLI recipe warehouse with PDF ingestion and normalization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pypdf>=5.0.0",
]

[project.scripts]
preppy = "dinner_planner.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
